--- a/pkgbuild/PKGBUILD
+++ b/pkgbuild/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=$(date +%y.%m.%d)
 pkgrel=$(date +%H%M)
 arch=('any')
 license=('MIT')
-url="https://github.com/communitybig/$pkgname"
+url="https://github.com/big-comm/${pkgname}"
 provides=("$pkgname")
 source=("git+${url}.git")
 md5sums=('SKIP')
